--- a/docs/src/app/(public)/(content)/react/components/navigation-menu/demos/hero/css-modules/index.module.css
+++ b/docs/src/app/(public)/(content)/react/components/navigation-menu/demos/hero/css-modules/index.module.css
@@ -1,22 +1,26 @@
 .Positioner {
-  transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1);
+  --duration: 2s;
+  box-sizing: border-box;
+  transition-property: transform;
+  transition-duration: 5s;
+  transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
   width: var(--positioner-width);
   height: var(--positioner-height);
 }
 
 .Popup {
   box-sizing: border-box;
-  padding: 1rem 1.5rem;
   border-radius: 0.5rem;
   background-color: canvas;
   color: var(--color-gray-900);
   transform-origin: var(--transform-origin);
-  transition-duration: 0.3s;
+  transition-duration: 1s;
   transition-property: transform, opacity, width, height;
   transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
-  min-width: 250px;
   width: var(--popup-width);
   height: var(--popup-height);
+  position: relative;
+  overflow: hidden;
 
   &[data-starting-style],
   &[data-ending-style] {
@@ -34,5 +38,34 @@
   @media (prefers-color-scheme: dark) {
     outline: 1px solid var(--color-gray-300);
     outline-offset: -1px;
+  }
+}
+
+.Content {
+  /* transition:
+    opacity 0.25s,
+    transform var(--duration) cubic-bezier(0.22, 1, 0.36, 1); */
+
+  &[data-starting-style],
+  &[data-ending-style] {
+    opacity: 0;
+  }
+
+  &[data-starting-style] {
+    &[data-activation-direction='left'] {
+      transform: translateX(-75%);
+    }
+    &[data-activation-direction='right'] {
+      transform: translateX(75%);
+    }
+  }
+
+  &[data-ending-style] {
+    &[data-activation-direction='left'] {
+      transform: translateX(75%);
+    }
+    &[data-activation-direction='right'] {
+      transform: translateX(-75%);
+    }
   }
 }
