--- a/docs/src/app/(public)/(content)/react/components/navigation-menu/demos/hero/css-modules/index.module.css
+++ b/docs/src/app/(public)/(content)/react/components/navigation-menu/demos/hero/css-modules/index.module.css
@@ -1,8 +1,55 @@
+.Root {
+  background-color: var(--color-gray-50);
+  border-radius: 0.5rem;
+  padding: 0.25rem;
+  color: var(--color-gray-900);
+}
+
+.Trigger {
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.375rem;
+  height: 2.5rem;
+  padding: 0 0.875rem;
+  margin: 0;
+  outline: 0;
+  border: none;
+  border-radius: 0.375rem;
+  background-color: var(--color-gray-50);
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5rem;
+  color: var(--color-gray-900);
+  user-select: none;
+
+  @media (hover: hover) {
+    &:hover {
+      background-color: var(--color-gray-100);
+    }
+  }
+
+  &:active {
+    background-color: var(--color-gray-100);
+  }
+
+  &[data-popup-open] {
+    background-color: var(--color-gray-100);
+  }
+
+  &:focus-visible {
+    outline: 2px solid var(--color-blue);
+    outline-offset: -1px;
+  }
+}
+
 .Positioner {
-  --duration: 2s;
+  --duration: 0.5s;
   box-sizing: border-box;
   transition-property: transform;
-  transition-duration: 5s;
+  transition-duration: var(--duration);
   transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
   width: var(--positioner-width);
   height: var(--positioner-height);
@@ -14,7 +61,7 @@
   background-color: canvas;
   color: var(--color-gray-900);
   transform-origin: var(--transform-origin);
-  transition-duration: 1s;
+  transition-duration: var(--duration);
   transition-property: transform, opacity, width, height;
   transition-timing-function: cubic-bezier(0.22, 1, 0.36, 1);
   width: var(--popup-width);
@@ -42,9 +89,10 @@
 }
 
 .Content {
-  /* transition:
+  transition:
     opacity 0.25s,
-    transform var(--duration) cubic-bezier(0.22, 1, 0.36, 1); */
+    transform var(--duration) cubic-bezier(0.22, 1, 0.36, 1);
+  min-width: max-content;
 
   &[data-starting-style],
   &[data-ending-style] {
@@ -53,19 +101,19 @@
 
   &[data-starting-style] {
     &[data-activation-direction='left'] {
-      transform: translateX(-75%);
+      transform: translateX(-50%);
     }
     &[data-activation-direction='right'] {
-      transform: translateX(75%);
+      transform: translateX(50%);
     }
   }
 
   &[data-ending-style] {
     &[data-activation-direction='left'] {
-      transform: translateX(75%);
+      transform: translateX(50%);
     }
     &[data-activation-direction='right'] {
-      transform: translateX(-75%);
+      transform: translateX(-50%);
     }
   }
 }
